# flaskr-postgres

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml  main.yml
flaskr/: __init__.py  admin.py  auth.py  blog.py  models.py
flaskr/templates/: base.html
flaskr/templates/admin/: index.html  update.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  data.sql  teardown.sql  test_admin.py  test_auth.py  test_blog.py  test_factory.py
