[project]
name = "flaskr"
version = "1.0.0"
dependencies = [
    "Flask",
    "Flask-SQLAlchemy",
    "gunicorn",
    "psycopg2",
    "python-dotenv"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["flaskr"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["flaskr"]
